kubernetes/victoriametrics/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: victoriametrics
  labels:
    app: victoriametrics
spec:
  replicas: 1
  selector:
    matchLabels:
      app: victoriametrics
  template:
    metadata:
      labels:
        app: victoriametrics
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 101000
        runAsGroup: 110000
        fsGroup: 110000
      containers:
        - name: victoriametrics
          image: victoriametrics/victoria-metrics:latest
          ports:
            - containerPort: 8428
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 500m
              memory: 1Gi
          volumeMounts:
            - name: data
              mountPath: /victoria-metrics-data
      volumes:
        - name: data
          hostPath:
            path: /home/nas/shared/pvcs/victoriametrics
            type: DirectoryOrCreate
