kubernetes/victoriametrics/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: victoriametrics
spec:
  selector:
    app: victoriametrics
  ports:
    - protocol: TCP
      port: 8428
      targetPort: 8428
  type: ClusterIP
