kubernetes/victoriametrics/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: victoriametrics
  namespace: victoriametrics
spec:
  hostnames:
    - victoriametrics.k8s.weinbender.io
  parentRefs:
    - kind: Gateway
      name: cluster-gateway
      namespace: envoy-gateway-system
      group: gateway.networking.k8s.io
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: "/"
      backendRefs:
        - kind: Service
          name: victoriametrics
          namespace: victoriametrics
          port: 8428
          group: ""
          weight: 1
