kubernetes/victoriametrics/vmagent-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: vmagent
spec:
  hostnames:
    - vmagent.k8s.weinbender.io
  parentRefs:
    - kind: Gateway
      name: cluster-gateway
      namespace: envoy-gateway-system
      group: gateway.networking.k8s.io
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: "/"
      backendRefs:
        - kind: Service
          name: vmagent
          namespace: vmagent
          port: 8428
          group: ""
          weight: 1
